--- a/fMailer.Web/Views/Main/Contacts.cshtml
+++ b/fMailer.Web/Views/Main/Contacts.cshtml
@@ -62,7 +62,7 @@
     </h1>
 </div>
 <div class="row-fluid">
-    <button class="btn btn-primary" title="Create new Template" data-bind="click: createNewContact">
+    <button class="btn btn-primary btn-small" title="Create new Template" data-bind="click: createNewContact">
         Create new Contact
     </button>
     <table class="table table-hover">
