--- a/fMailer.Web/Views/Main/Templates.cshtml
+++ b/fMailer.Web/Views/Main/Templates.cshtml
@@ -11,8 +11,10 @@
     </div>
     <div class="modal-body" style="max-height: 500px;" data-bind="with: currentTemplate">
         <input type="text" class="input-block-level" placeholder="Template name" data-bind="value: Name" required maxlength="250" />
-        <input type="text" class="input-block-level" placeholder="Short description" data-bind="value: Description" maxlength="250" />
-        <textarea id="wysiwyg" class="input-block-level" style="height: 300px; overflow-y:scroll;" data-bind="value: Text"></textarea>
+        <input type="text" class="input-block-level" placeholder="Subject" data-bind="value: Subject" maxlength="250" />
+        <textarea class="input-block-level" style="height: 300px; overflow-y:scroll;" id="textEdit"
+                  data-bind="value: Text"></textarea>
+                  @*data-bind="advancedEditor: { target: Text }"></textarea>*@
     </div>
     <div class="modal-footer">
         <div class="progress progress-striped active" style="height: 4px; margin: -9px 0px 5px 0px; display: none;" data-bind="visible: isBusy">
@@ -45,7 +47,7 @@
     <h1 class="large"><img alt="Templates" src="@Url.Content("~/Content/Images/Mail write.png")" /> Templates</h1>
 </div>
 <div class="row-fluid">
-    <button class="btn btn-primary" title="Create new Template" data-bind="click: openCreateTemplateModal">
+    <button class="btn btn-primary btn-small" title="Create new Template" data-bind="click: openCreateTemplateModal">
         Create new Template
     </button>
     <table class="table table-hover">
@@ -57,13 +59,10 @@
                             <img alt="Add template" src="@Url.Content("~/Content/Images/Mail Write(d).png")" style="margin-top: 30px;" />
                         </div>
                         <div class="span11">
-                        <blockquote>
                             <p>
-                                <h3><a href="#" data-bind="text: Name, click: editTemplate"></a></h3>
-                                <button class="close pull-right" title="Delete template" data-bind="click: deleteTemplate">x</button>
+                                <h3><a href="#" data-bind="text: Name, click: editTemplate"></a><button class="close pull-right" title="Delete template" data-bind="click: deleteTemplate">x</button></h3>
                             </p>
-                            <small data-bind="text: Description"></small>
-                        </blockquote>
+                            <span data-bind="text: Subject"></span>
                         </div>
                     </div>
                 </td>
