--- a/fMailer.Web/Views/Shared/_Layout.cshtml
+++ b/fMailer.Web/Views/Shared/_Layout.cshtml
@@ -12,9 +12,10 @@
     <meta name="author" content="feafarot">
 
     <link rel="shortcut icon" href="favicon.png" />
-    <link href="@Url.Content("~/Content/Common.css")" rel="stylesheet">
-    <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap.min.css")" rel="stylesheet">
-    <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap-responsive.min.css")" rel="stylesheet">
+    <link href="@Url.Content("~/Content/Common.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap.min.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap-responsive.min.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/bootstrap-wysihtml5-0.0.2.css")" rel="stylesheet" />
     <style type="text/css">
         html,
         body 
@@ -82,6 +83,8 @@
     <script src="@Url.Content("~/Scripts/linq.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Content/Bootstrap/js/bootstrap.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/timers-manager.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/wysihtml5-0.3.0_rc2.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/bootstrap-wysihtml5-0.0.2.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/helpers.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/services-manager.js")" type="text/javascript"></script>
     @if (!string.IsNullOrEmpty(ViewBag.ViewModelPath))
