Implemented attachments functionality. Used jansy bootstrap fork. Little reworked js services manager. Fixed bugs.

--- a/fMailer.Web/Views/Main/Contacts.cshtml
+++ b/fMailer.Web/Views/Main/Contacts.cshtml
@@ -83,7 +83,7 @@
                                 <span><strong>\</strong></span>
                                 Email: 
                                 <a data-bind="text: Email, attr: { href: 'mailto:'+Email() }"></a>
-                                <button class="close pull-right" title="Delete template" data-bind="click: deleteContact">x</button>
+                                <button class="close pull-right" title="Delete template" data-bind="click: deleteContact">&times;</button>
                             </h4>
                             <p style="margin-bottom: 8px;">
                                 Assigned groups:&nbsp;
