--- a/fMailer.Web/Views/Main/Distributions.cshtml
+++ b/fMailer.Web/Views/Main/Distributions.cshtml
@@ -63,7 +63,7 @@
 
 <div class="row-fluid">
     <div class="accordion" id="accordion" data-bind="foreach: distrs">
-        <div class="accordion-group">
+        <div class="accordion-group" style="border-bottom: 1px solid lightgray;">
             <div class="accordion-heading">
                 <div class="row-fluid">
                     <div class="span1 hidden-phone">[ICON]</div>
