--- a/fMailer.Web/Views/Shared/_Layout.cshtml
+++ b/fMailer.Web/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="favicon.png" />
     <link href="@Url.Content("~/Content/Common.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap.min.css")" rel="stylesheet" />
-    <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap-responsive.min.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap-responsive.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/bootstrap-wysihtml5-0.0.2.css")" rel="stylesheet" />
     <style type="text/css">
         html,
