Updated distributions page(added displaying about replies and fails). Implemented logic with loading and parsing replies.

--- a/fMailer.Web/Views/Main/Contacts.cshtml
+++ b/fMailer.Web/Views/Main/Contacts.cshtml
@@ -71,7 +71,7 @@
                 <td>
                     <div class="row-fluid">
                         <div class="span1 hidden-phone">
-                            <img alt="Add template" src="@Url.Content("~/Content/Images/User-Message(d).png")" style="margin-top: 10px;" />
+                            <img alt="Contact image" src="@Url.Content("~/Content/Images/User-Message(d).png")" style="margin-top: 10px;" />
                         </div>
                         <div class="span11">
                             <h4>
