--- a/fMailer.Web/Views/Shared/ErrorModalPartial.cshtml
+++ b/fMailer.Web/Views/Shared/ErrorModalPartial.cshtml
@@ -9,13 +9,13 @@
         </p>
         <hr style="margin-bottom: 0px;" />
         <a href="#" data-toggle="collapse" data-target="#errorDetailsExpander">
-            Error Details
+            Error details
         </a> 
         <div id="errorDetailsExpander" class="collapse"> 
             <span id="errorDetails"> Server side runtime exception occured. </span>
         </div>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-warning" onclick="window.location.reload()">Reload Page</button>
+        <button class="btn btn-warning" onclick="window.location.reload()">Reload page</button>
     </div>
 </div>
