--- a/fMailer.Web/Views/Auth/SignIn.cshtml
+++ b/fMailer.Web/Views/Auth/SignIn.cshtml
@@ -13,7 +13,7 @@
     <!-- Le styles -->
     <link href="@Url.Content("~/Content/Common.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap.min.css")" rel="stylesheet">
-    <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap-responsive.min.css")" rel="stylesheet">
+    <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap-responsive.css")" rel="stylesheet" />
     <style type="text/css">
       @@font-face 
       {
