--- a/fMailer.Web/Views/Main/Contacts.cshtml
+++ b/fMailer.Web/Views/Main/Contacts.cshtml
@@ -17,7 +17,7 @@
         <input type="text" class="input-block-level" placeholder="Last name" data-bind="value: LastName" required maxlength="250" />
         <input type="text" class="input-block-level" placeholder="Middle name" data-bind="value: MiddleName" maxlength="250" />
         <p style="margin-bottom: 8px;">
-            Groups:&nbsp;@*<span class="label"><a data-title="Help" data-content="For assign contact to group select one and press 'Enter'." href="#">?</a></span>*@
+            Groups:&nbsp;
             <span data-bind="visible: Groups().length < 1" class="muted">No groups</span>
             <span data-bind="foreach: Groups" >
                 <span class="label label-info">#<span data-bind="text: Name"></span><button class="close close-inlabel" data-bind="click: removeGroup">x</button></span>
@@ -55,16 +55,42 @@
     </div>
 </div>
 
+<div id="loadingModal" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true" style="z-index: 60000">
+    <div class="modal-body">
+        <div>
+            Importing contacts...
+        </div>
+        <div class="progress progress-striped active" style="height: 4px; margin: 0px 0px 5px 0px;">
+            <div class="bar" style="width: 100%;"></div>
+        </div>
+    </div>
+</div>
+
 <div class="page-header">
     <h1 class="large">
         <img alt="Contacts and Groups" src="@Url.Content("~/Content/Images/User-Message.png")" />
         Contacts and Groups
     </h1>
 </div>
-<div class="row-fluid">
+
+<div id="upload" class="fileupload fileupload-new inline-block" style="margin-bottom: 0px;" data-provides="fileupload">
     <button class="btn btn-primary btn-small" title="Create new Template" data-bind="click: createNewContact">
         Create new Contact
     </button>
+    &nbsp;
+    <span class="btn btn-file btn-small btn-info">
+        <span class="fileupload-new">Select file</span>
+        <span class="fileupload-exists">Change</span>
+        <input type="file" accept=".csv" accesskey=".csv" data-bind="file: imageFile, fileObjectURL: imageObjectURL, fileBinaryData: imageBinary" />
+    </span>
+    <span class="fileupload-preview"></span>
+    <a href="#" class="close fileupload-exists" data-dismiss="fileupload" style="float: none">×</a>
+    <button class="btn btn-info btn-small" title="Import contacts" data-bind="click: importContacts">
+        Import contacts
+    </button>
+</div>
+
+<div class="row-fluid">
     <table class="table table-hover">
         <tbody data-bind="foreach: contacts">
             <tr>
