--- a/fMailer.Web/Views/Shared/_Layout.cshtml
+++ b/fMailer.Web/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 
     <link rel="shortcut icon" href="favicon.png" />
     <link href="@Url.Content("~/Content/Common.css")" rel="stylesheet" />
-    <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap.min.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap-responsive.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/bootstrap-wysihtml5-0.0.2.css")" rel="stylesheet" />
     <style type="text/css">
@@ -84,7 +84,7 @@
     <script src="@Url.Content("~/Content/Bootstrap/js/bootstrap.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/timers-manager.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/wysihtml5-0.3.0_rc2.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/bootstrap-wysihtml5-0.0.2.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/bootstrap-wysihtml5-0.0.2.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/helpers.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/services-manager.js")" type="text/javascript"></script>
     @if (!string.IsNullOrEmpty(ViewBag.ViewModelPath))
