--- a/fMailer.Web/Content/Common.css
+++ b/fMailer.Web/Content/Common.css
@@ -45,10 +45,14 @@
 }
 .typeahead.dropdown-menu 
 {
-    z-index: 20055;
+    z-index: 1056;
 }
 .close.close-inlabel 
 {
     font-size: 16px;
     margin: -5px 0px 0px 3px;
+}
+.non-relative
+{
+    position: static;
 }
