Fixed labels with close in Firefox. Reworked contact selection in Distributions, now it searchs by LastName + FirstName.

--- a/fMailer.Web/Content/Common.css
+++ b/fMailer.Web/Content/Common.css
@@ -56,3 +56,10 @@
 {
     position: static;
 }
+@-moz-document url-prefix() 
+{
+    .close.close-inlabel 
+    {
+        margin: -19px 0 0 3px;
+    }
+}
