--- a/fMailer.Web/Views/Main/Contacts.cshtml
+++ b/fMailer.Web/Views/Main/Contacts.cshtml
@@ -16,6 +16,7 @@
         <input type="text" class="input-block-level" placeholder="First name" data-bind="value: FirstName" required maxlength="250" />
         <input type="text" class="input-block-level" placeholder="Last name" data-bind="value: LastName" required maxlength="250" />
         <input type="text" class="input-block-level" placeholder="Middle name" data-bind="value: MiddleName" maxlength="250" />
+        <input type="text" class="input-block-level" placeholder="Organization" data-bind="value: Organization" maxlength="250" />
         <p style="margin-bottom: 8px;">
             Groups:&nbsp;
             <span data-bind="visible: Groups().length < 1" class="muted">No groups</span>
